<resources>
    <string name="app_name">GerniBide</string>
    <string name="login_title">Saioa hasi</string>
    <string name="login_username_hint">Erabiltzailea</string>
    <string name="login_password_hint">Pasahitza</string>
    <string name="login_button">Saioa hasi</string>
    <string name="login_welcome">¡Ongi etorri %s!</string>
    <string name="ez_duzu_konturik_izena_eman">Konturik ez duzu? Erregistratu</string>
    <string name="edit_profile_title">Profila editatu</string>
    <string name="save_changes">Aldaketak gorde</string>
    <string name="update_success">¡Aldaketak gordeta!</string>
    <string name="sortu_kontua">Kontua sortu</string>
    <string name="erabiltzaile_izena">Erabiltzaile izena</string>
    <string name="izena">Izena</string>
    <string name="abizena_k">Abizenak</string>
    <string name="klase_batekoa_zara">Klase batekoa zara?</string>
    <string name="klase_id">Klasearen kodea (6 karaktere)</string>
    <string name="izena_eman">ERREGISTRATU</string>
    <string name="baduzu_kontu_bat_saioa_hasi">Kontu bat duzu dagoeneko? Saioa hasi</string>
    <string name="nombre_usuario_requerido">Erabiltzaile izena beharrezkoa</string>
    <string name="nombre_requerido">Izena beharrezkoa</string>
    <string name="apellido_requerido">Abizenak beharrezkoak</string>
    <string name="id_clase_requerido">Klasearen kodea beharrezkoa (6 karaktere)</string>
    <string name="error_codigo_longitud">Kodeak 6 karaktere izan behar ditu</string>
    <string name="error_no_sesion_activa">Ez dago saio aktiborik</string>
    <string name="pasahitza">Pasahitza</string>
    <string name="pasahitza_requerida">Pasahitza beharrezkoa</string>
    <string name="pasahitza_laburgia">Pasahitza gutxienez 6 karaktere izango ditu</string>
    <string name="registrandose">Erregistratzen…</string>
    <string name="error_de_conexion">Konexio errorea</string>
    <string name="registro_exitoso">¡Erabiltzailea erregistratuta!</string>
    <string name="error_usuario_existe">Erabiltzaile izen hori hartuta dago. Mesedez, beste bat aukeratu</string>
    <string name="error_codigo_clase_no_existe">Ez dago klase kode hori duen klasea</string>
    <string name="error_datos_invalidos">Datuak ez dira zuzenak. Egiaztatu mesedez</string>
    <string name="error_registro_servidor">Ezin izan da erregistroa egin. Saiatu berriro geroago</string>
    <string name="error_login_credenciales">Erabiltzaile izena edo pasahitza okerra da</string>
    <string name="error_login_servidor">Ezin izan da saioa hasi. Saiatu berriro geroago</string>
    <string name="error_crear_partida">Ezin izan da partida sortu. Saiatu berriro</string>
    <string name="plaza_titulo">Gernikako Plaza nagusia</string>
    <string name="siguiente">Hurrengoa</string>
    <string name="play_pause">Erreproduzitu/Gelditu</string>
    <string name="plaza_activity_1">1. Videoa</string>
    <string name="plaza_activity_2">2. Merkatua</string>
    <string name="plaza_activity_3">3. Bertsoa</string>
    <string name="plaza_activity_4">4. Argazkiak</string>
    <string name="arrastra_productos_titulo">Produktuak beren\npostuan jarri</string>
    <string name="arrastra_instrucciones">Jarri produktu bakoitza dagokion postuan</string>
    <string name="puesto_lacteos">Esnekiak</string>
    <string name="puesto_verduras">Barazkiak</string>
    <string name="puesto_panaderia">Ogia</string>
    <string name="puesto_natural">Naturala</string>
    <string name="puesto_artesania">Artisautza</string>
    <string name="completado_titulo">¡Ederto!</string>
    <string name="completado_mensaje">¡Azoka prest! ¡Gernika bizirik dago!</string>
    <string name="jarraitu">Jarraitu</string>
    <string name="producto_gazta">Gazta</string>
    <string name="producto_esnea">Esnea</string>
    <string name="producto_jogurta">Jogurta</string>
    <string name="producto_piperrak">Piperrak</string>
    <string name="producto_kipula">Tipula</string>
    <string name="producto_indabak">Indabak</string>
    <string name="producto_ogi_otzara">Ogia</string>
    <string name="producto_madalenak">Madalenak</string>
    <string name="producto_pastela">Pastela</string>
    <string name="producto_eztia">Eztia</string>
    <string name="producto_polena">Polena</string>
    <string name="producto_esku_lanak">Egurrezko esku lanak</string>
    <string name="producto_ontziak">Buztinezko ontziak</string>
    <string name="producto_zestak">Zestak</string>
    <string name="verso_titulo">Bertso-jokoa</string>
    <string name="comprobar">Egiaztatu</string>
    <string name="aciertos">Asmatuak: 0/3</string>
    <string name="foto_mision_titulo">Argazki Eginkizunak</string>
    <string name="foto_mision_descripcion">Argazki eginkizunak osatu</string>
    <string name="finalizar">Amaitu</string>
    <string name="mision_icono">Eginkizunaren ikonoa</string>
    <string name="tomar_foto">Argazkia atera</string>
    <string name="plaza_txt_video">Plaza da herriko bihotza. Astelehen bakoitzean, inguruko nekazariak plazan biltzen dira beraien produktuak saltzeko. Horrez gain, bertan elkartzen gara jaietan, azoketan eta egun berezietan. Urriko azken astelehena berezia izaten da, eta gure herria kolorez, postu ezberdin askoz eta musikaz betetzen da. Tradizio hauei esker, gure kultura bizirik dagoela eta guztion artean egiten dugula ikasten dugu.</string>
    <string name="_0_00_0_00">0:00 / 0:00</string>
    <string name="jendea_etorri_da">Jendea etorri da, Gernikako plazara</string>
    <string name="barazkiak_erostera">barazkiak erostera diro ta algaraz</string>
    <string name="gerrikoa_jantzi">gerrikoa jantzi eta pilotan jolaztera</string>
    <string name="baina_ni_trizturaz">baina ni tristuraz nago, horieri  begira</string>
    <string name="error_username_required">Sartu zure erabiltzailea</string>
    <string name="error_password_required">Sartu zure pasahitza</string>
    <string name="error_no_internet">Interneteko konexiorik ez</string>
    <string name="error_timeout">Denboraren muga gainditu da</string>
    <string name="error_connection">Konexio errorea: %s</string>
    <string name="error_server">Zerbitzariaren errorea: %d</string>
    <string name="error_unknown">Errore ezezaguna</string>
    <string name="error_empty_response">Zerbitzariaren erantzun hutsa</string>
    <string name="map_marker_title_arbola">Gernikaren Arbola eta Batzaretxea</string>
    <string name="map_marker_title_bunker">Astrako bunkereak</string>
    <string name="map_marker_title_guernica">Picasso-ren \"Guernika\"</string>
    <string name="map_marker_title_plaza">Gernikako merkatu plaza</string>
    <string name="map_marker_title_frontoi">Jai-Alai Frontoia</string>
    <string name="map_dialog_message">%s-ra iritsi zara.\n¿Sartu nahi duzu?</string>
    <string name="map_dialog_button_enter">Sartu</string>
    <string name="map_dialog_button_cancel">Ez</string>
    <string name="map_entered_location">Sartu zara: %s</string>
    <string name="map_bottom_sheet_default_title">Puntu bat aukeratu</string>
    <string name="map_bottom_sheet_default_description">Sakatu mapako puntu bat informazioa ikusteko</string>
    <string name="map_location_icon">Kokalekuaren ikonoa</string>
    <string name="map_button_go_to_activity">Jarduera bisitatu</string>
    <string name="map_description_arbola">Gernikako Arbola euskal herriko ikurrik nagusienetakoa da. Bere azpian elkartzen ziren legegintzaren biltzarrak. Horretaz gain, euskaldunen askatasunaren sinboloa da.</string>
    <string name="map_description_bunker">Astrako bunkereak Gerracivilaren lekukoak dira. 1937ko bonbardaketaren garaian, herritarrek zuhaitz gisa erabili zituzten.</string>
    <string name="map_description_guernica">Pablo Picasso-k margotutako Guernika gerra zibilaren aurkako arte-protesta da, mundu osoan ezaguna.</string>
    <string name="map_description_plaza">Gernikako merkatu plaza herriko bihotza da. Astelehen bakoitzean nekazariak hemen saltzen dute bere produktuak.</string>
    <string name="map_description_frontoi">Frontoi Jai-Alai munduko handienetakoa da, non zesta puntara jokatzen den, euskal kirola.</string>
    <string name="fab_menu">Menua</string>
    <string name="fab_home">Hasiera</string>
    <string name="fab_settings">Ezarpenak</string>
    <string name="fab_profile">Profila</string>
    <string name="picasso_title">Picasso-ren Guernika</string>
    <string name="picasso_subtitle">Jarduerak</string>
    <string name="picasso_audioa">1. Audioa</string>
    <string name="picasso_activity_1">2. Bakea margotu</string>
    <string name="picasso_activity_2">3. Begira eta asmatu</string>
    <string name="picasso_activity_3">4. Nire mezua mundua</string>
    <string name="picasso_guernica_description">Guernika</string>
    <string name="picasso_kuadro_desc">Picasso-ren kuadroa</string>
    <string name="picasso_audio_texto_ayuda">Picasso ez zen Gernikan egon, baina bonbardaketak, haren bihotza hunkitu zuen. Bonbardaketaren ondorioz, herri oso baten mina margotu zuen eta hori da, aurrez aurre dugun koadroa. Koadroak munduari oihu egin zion: ‘Gerrarik ez!’. Gaur egun, bakearen eta giza duintasunaren sinbolo da. Arteak, minetik ere itxaropena sor daitekeela erakusten digu.</string>
    <string name="color_peace_title">Bakea margotzen</string>
    <string name="color_peace_instructions">Marraztu hatzekin, bi hatzekin pixkatu handitu/txikitzeko eta mugitu</string>
    <string name="color_peace_clear">Ezabatu</string>
    <string name="color_peace_finish">Bukatu</string>
    <string name="color_peace_dialog_title">¡Ederki!</string>
    <string name="videoa_erreproduzitu">Videoa erreproduzitu</string>
    <string name="gehitu">Gehitu</string>
    <string name="idatzi_zure_taldearen_balioa">Idatzi zure taldearen balioa</string>
    <string name="zein_balio_agertzen_dira_jokoan">Zein balio agertzen dira jokoan?</string>
    <string name="lankidetza">Lankidetza</string>
    <string name="errespetua">Errespetua</string>
    <string name="bakardadea">Elkartasuna</string>
    <string name="berretsi">Berretsi</string>
    <string name="amaitu">Amaitu</string>
    <string name="atzera">Atzera</string>
    <string name="elkarrekin_jokatuz_eta_elkar_entzunez_guztion_balioak_osatuko_ditugu">Elkarrekin jokatuz eta elkar entzunez, guztion balioak osatuko ditugu.</string>
    <string name="itzuli">Itzuli</string>
    <string name="ulermen_galderak">Ulermen galderak</string>
    <string name="_1_zertarako_elkartzen_ziren_arbolaren_azpian">1. Zertarako elkartzen ziren Arbolaren azpian?</string>
    <string name="legeak_adosteko_eta_foruak_zin_egiteko">Legeak adosteko eta foruak zin egiteko</string>
    <string name="bazkaltzeko">Bazkaltzeko</string>
    <string name="_2_zer_adierazten_du_batzar_etxeak">2. Zer adierazten du Batzar Etxeak?</string>
    <string name="euskal_herriko_demokrazia_eta_askatasuna">Euskal Herriko demokrazia eta askatasuna</string>
    <string name="museo_soil_bat">Museo soil bat</string>
    <string name="_3_zertarako_erabiltzen_da_batzar_etxea">3. Zertarako erabiltzen da Batzar Etxea?</string>
    <string name="batzar_nagusiak_egiteko">Batzar Nagusiak egiteko</string>
    <string name="kontzertuak_emateko">Kontzertuak emateko</string>
    <string name="ondo_egin_duzu_orain_zure_arbola_sortzera_goaz">Ondo egin duzu! Orain zure arbola sortzera goaz.</string>
    <string name="about_description">Gernikako historia eta kultura interaktiboki ikasteko aplikazioa.</string>
    <string name="desarrollado_por">Garatzaileak</string>
    <string name="didaktikapp">DidaktikApp</string>
    <string name="autores">Arantxa, Erlantz, Telmo eta Wara</string>
    <string name="logo_descripcion">GerniBide aplikazioaren logotipoa</string>
    <string name="version_app">b1.0.0</string>
    <string name="copyright">© 2026 DidaktikApp</string>
    <string name="itxi">Itxi</string>
    <string name="cifp_ciudad_jardin">CIFP Ciudad Jardín LHII</string>
    <string name="ehu">Euskal Herriko Unibertsitatea (UPV/EHU)</string>
</resources>