<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/espaciado_xl"
    android:background="@color/base">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/espaciado_xxxl">

        <!-- Logo/App Icon -->
        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/logo_descripcion"
            android:src="@mipmap/ic_gernibide_launcher"
            android:layout_marginBottom="@dimen/espaciado_xl"/>

        <!-- Nombre App + Versión -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/AparienciaTexto.App.TituloGrande.Primario"
            android:layout_marginBottom="@dimen/espaciado_sm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_app"
            android:textAppearance="@style/AparienciaTexto.App.Etiqueta.Defecto"
            android:layout_marginBottom="@dimen/espaciado_xxl"/>

        <!-- Descripción breve -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_description"
            android:textAppearance="@style/AparienciaTexto.App.Cuerpo.Defecto"
            android:textAlignment="center"
            android:lineSpacingExtra="@dimen/espaciado_xs"
            android:layout_marginBottom="@dimen/espaciado_xxl"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/espaciado_xl">

            <!-- CIFP Ciudad Jardín -->
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_ciudad_jardin"
                android:layout_marginEnd="@dimen/espaciado_xl"
                android:contentDescription="@string/cifp_ciudad_jardin"/>

            <!-- UPV/EHU -->
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/logo_ehu"
                android:contentDescription="@string/ehu"/>

        </LinearLayout>

        <!-- Información sobre los desarrolladores -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/espaciado_lg"
            android:background="@drawable/border_only"
            android:layout_marginBottom="@dimen/espaciado_xl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desarrollado_por"
                android:textAppearance="@style/AparienciaTexto.App.Etiqueta.Defecto"
                android:layout_marginBottom="@dimen/espaciado_sm"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autores"
                android:textAppearance="@style/AparienciaTexto.App.Cuerpo.Defecto"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/didaktikapp"
                android:textAppearance="@style/AparienciaTexto.App.Caption"/>
        </LinearLayout>

        <!-- Copyright -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAppearance="@style/AparienciaTexto.App.Caption"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/espaciado_xl"/>

        <!-- Botón cerrar -->
        <Button
            android:id="@+id/btnCloseAbout"
            style="@style/EstiloBotonSecundario"
            android:layout_width="match_parent"
            android:layout_height="@dimen/boton_altura"
            android:text="@string/itxi"/>

    </LinearLayout>
</ScrollView>